--- a/css/main.css
+++ b/css/main.css
@@ -963,7 +963,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #c1a830;
+  background: #ff000e;
 }
 .sidebar-nav {
   margin: 0 0 20px;
